# YuriEveryHour_bot

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yaml
.sqlx/: query-00c98b6ddbb9c5232ce2b12c4d1c3ba408245ef4740b019be74d7481e80d138a.json  query-0950860cbe776a9a3a6fa2264ad23e1332dba886c7d03328503cff766d3f92d7.json  query-0d942668024e194c5731536f5f51a807803e71f1ebea4ff7f0056615d82fde0d.json  query-1525e9185bbe3666e5872fb80094a864f0387ff00e74f3910d8d78de2e129acf.json  query-26faa5c926912df95efba28ba7bb3f8a5c903dcdcd381b88269d0005cf2b57fc.json  query-285393067e7b49fa6a2140aba36a53b01c0b4c036d98d4322389a9cd3b1af4c3.json  query-35e16b7351ec57707ee41762df4b710465989b7ba65afef823458c1b8a584806.json  query-40a7acfea35515daae488f0f01438f83868c1c80de8bb05aa8c7486ac9d14bac.json  query-47953569afd1b4da01293fb04a2d2bb382908eb22f40d2c2c65334ad7ee9e254.json  query-515f13b1d851c1fc70f3a7cfea7044a66828f9c983e58d48598cc4e6ba261fa3.json  query-694bb59e1aa35bf044cbb7d06173b3e631d579676e2fd589f9389398f090a54d.json  query-74b109c72b41fa826eaf6be8e74052e9e38955e2ca540e0178b29c53bc6b636c.json  query-7747c7c66b9543b5f78466d808cb2db9fb6e5051d2d24ee7517ed26ccdf0a9a3.json  query-86d31a44f5c3bc308b9364b59bb641c5a5ff52097dd6bf26086d38117347cd4e.json  query-a70733d1134230a6e3cc75db1134fb7d381a9030e0fddbee62bfc6ad792acf79.json  query-b1b9574cb834172e2f33b2f6942a9137011f59d70c71f6f90f9a96e1a5ba261d.json  query-cbcf0405877ab17e9671cf71ce846a26ce6a8717697ff561bcbff7bce3728112.json  query-da4beb6fa6b77dd62dd1b8907544c72fd1a6d8abab1997fb69ee5eefaf86c789.json  query-f1ea34539d847611a0ca6277de4e9457129e360195ee8a974e524f32b67c10d9.json
migrations/: 20240214213426_initialise.sql  20240217194211_submissions-add-rejected-column.sql  20240217212512_create-pending-approvals-table.sql  20240217224310_make-submissions-decision-nullable.sql  20240217230152_add-pending-approvals-creation-date.sql
src/: cli.rs  config.rs  main.rs
src/discord/: data.rs  event_handler.rs  handlers.rs  mod.rs
src/discord/interactions/: mod.rs  ping.rs  yuri.rs
src/models/: mod.rs  pending_approvals.rs  submissions.rs
