[package]
name = "yuri_every_hour_bot"
description = "A botsin.space bot that sends wholesome and cute Yuri content every hour!"
version = "0.0.0"
edition = "2021"
rust-version = "1.76.0"
authors = ["tuhana <hi@tuhana.me>"]

[profile.release]
strip = "symbols"
lto = "thin"

[dependencies]
anyhow = "1.0.79"
async-trait = "0.1.77"
clap = { version = "4.5.1", features = ["env", "derive"] }
dirs = "5.0.1"
figment = { version = "0.10.14", features = ["env", "yaml"] }
figment_file_provider_adapter = "0.1.1"
serde = { version = "1.0.196", features = ["derive"] }
serenity = { git = "https://github.com/serenity-rs/serenity", branch = "next", version = "0.12.0", features = [
  "client",
  "collector",
  "gateway",
  "model",
  "utils",
] }
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio", "time"] }
time = "0.3.34"
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
