[package]
name = "yuri_every_hour_bot"
description = "A botsin.space bot that sends wholesome and cute Yuri content every hour!"
version = "0.0.0"
publish = false
edition = "2021"
rust-version = "1.76.0"
authors = ["tuhana <hi@tuhana.me>"]

[profile.release]
strip = "symbols"
lto = "thin"

[dependencies]
anyhow = "1.0.81"
async-trait = "0.1.79"
chrono = "0.4.37"
clap = { version = "4.5.4", features = ["env", "derive"] }
dirs = "5.0.1"
figment = { version = "0.10.15", features = ["env", "yaml"] }
figment_file_provider_adapter = "0.1.1"
serde = { version = "1.0.197", features = ["derive"] }
serenity = { git = "https://github.com/serenity-rs/serenity", branch = "next", version = "0.12.0", features = [
  "client",
  "collector",
  "gateway",
  "model",
  "utils",
] }
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio", "chrono"] }
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
